# FaceLibre

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  swagger.yaml
docs/: API.md
scripts/: add_client_ip_column.sql  extract_from_logs.py  extract_logs.txt  extract_vggface.py  randomize_existing_timestamps.py  register_vggface_library.py  test_registration.py  test_search.py
src/: face_database.cpp  face_database.hpp  face_database_mysql.hpp  face_service.cpp  face_service.hpp  main.cpp
